# GameEngine

./: CMakeLists.txt  linmath.h  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
src/: Application.cpp  Application.h  BackgroundLayer.cpp  BackgroundLayer.h  Layer.cpp  Layer.h  Window.cpp  Window.h  main.cpp  readimage.cpp
src/events/: Event.h
src/shaders/: colorPosShader.glsl  fragmentShader.glsl  textureFragmentShader.glsl  textureVertexShader.glsl  vertexShader.glsl
